@@ -8,6 +8,7 @@ Version 1.0.8 To be released
 - Bug #440: typo in COciColumnSchema (Qiang)
 - Bug #444: typo in blog demo (Qiang)
 - Bug #446: Fixed bugs in MSSQL driver that cause problem when updating attribues and a column is of timestamp type (Qiang)
+- Bug #451: CAssetManager::publish() may not report error when an asset is missing on BSD (Qiang)
 - New #436: Added error templates in Russian (idlesign)
 - New: CDbCommand::bindParam() and bindValue() now return the command object so that they can be used in a chainable fashion (Qiang)
 - New: Added thead and tbody to the code generated by crud command (Qiang)
